style: fix a column gap

--- a/styles/AppHeader.module.scss
+++ b/styles/AppHeader.module.scss
@@ -45,8 +45,8 @@
     align-items: center;
     gap: 30px;
 
-    @media screen and (max-width: 1320px) {
-      gap: 20px;
+    @media screen and (max-width: 1180px) {
+      gap: 18px;
     }
 
     @media screen and (max-width: 1100px) {
